# atomic-research-mcp

./: README.md  pyproject.toml  test_client.py
atomic_research_mcp/: config.py  server.py
atomic_research_mcp/agents/: qa_agent.py  query_agent.py
atomic_research_mcp/tools/: webpage_scraper.py
